added media queries for mobiles commit2

--- a/404-not-found-master/index.html
+++ b/404-not-found-master/index.html
@@ -117,6 +117,56 @@
         transform: translate(-50%, 0);
         color: rgba(189, 189, 189, 1);
       }
+
+      @media (max-width: 480px) and (min-width: 320px) {
+        .pageContainer {
+          max-width: 375px;
+          height: 949px;
+          margin: 0px auto;
+        }
+
+        .pageHeader {
+          top: 20px;
+          left: 24px;
+        }
+
+        .img {
+          width: 286.83px;
+          height: 238px;
+          top: 109px;
+          left: 44px;
+        }
+
+        .mainText {
+          width: 350px;
+          height: 142px;
+          top: 407px;
+          left: 24px;
+          font-size: 48px;
+          line-height: 71.09px;
+        }
+
+        .subText {
+          width: 328px;
+          height: 81px;
+          top: 579px;
+          left: 23px;
+          font-size: 18px;
+          line-height: 26.66px;
+        }
+
+        .btnContainer {
+          width: 216px;
+          height: 68px;
+          top: 726px;
+          left: 24px;
+        }
+
+        /* .btn {
+          top:750px;
+          left:67px;
+        } */
+      }
     </style>
   </head>
   <body>
